# ListArray

./: CMakeLists.txt  README.md  arrlst.c  arrlst.h
.github/workflows/: codeql.yml
exampleFiles/: full  full.c  initialize.c  listingItens.c  managing  managingItens.c
exampleFiles/arraysExamples/: full.c  initialize  initialize.c  listing  listingItens.c  managingItens.c
exampleFiles/singleLinked/: initializing.c
include/: vdskit.h
src/: arrlst.c  arrlst.h
src/Arrays/: Arrays.c  arrlst.h
src/LinkedLists/doubeLinked/: doubleLinked.c  doubleLinked.h
src/LinkedLists/singleLinked/: singleLinked.c  singleLinked.h
src/Queue/: Queue.c  Queue.h
src/Stack/: Stack.c  Stack.h
src/Stack/dynamicStack/: dynamicStack.c  dynamicStack.h
src/Stack/staticStack/: staticStack.c  staticStack.h
